# yellowbrick

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  ConfusionMatrix label_encoder example.ipynb  DESCRIPTION.md  DESCRIPTION.rst  DESCRIPTION.txt  Glass Data.ipynb  LICENSE  LICENSE.txt  MAINTAINERS.md  MANIFEST.in  Makefile  Palettable_investigator.py.py  README.md  Random Forrest  Whole Sale Customers.ipynb  Working Example (not test covered yet).ipynb  balance-scale-user-study.ipynb  linebestfit.py  merged_adm_sat_data example.ipynb  mkdocs.yml  neighbors-test-college.ipynb  requirements.txt  setup.cfg  setup.py  untitled0.py  untitled1.py  updated notebook -nathan.ipynb
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  bug_report.md  ci.yml  issue_template.md  pull_request_template.md
binder/: requirements.txt
docs/: Makefile  README.md  about.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  evaluation.rst  faq.rst  gallery.py  gallery.rst  governance.rst  index.md  index.rst  introduction.rst  make.bat  matplotlib.rst  oneliners.rst  quickstart.rst  requirements.txt  setup.md  setup.rst  teaching.rst  tutorial.py  tutorial.rst
effectPlot/: effectPlotDemo.ipynb  housing_price.csv
examples/: DatasaurusDozen.tsv  Getting Started with Yellowbrick.ipynb  Iris - clustering example.ipynb  README.md  Untitled.ipynb  clustering.ipynb  clustering_visualizers.ipynb  download.py  examples-Copy1.ipynb  examples.ipynb  examples.py  freqtext.ipynb  light-dark-text.ipynb  palettes.ipynb  pipeline.ipynb  rank2d.ipynb  regression-examples.ipynb  regression.ipynb  regression_visualizers.ipynb  requirements.txt  text.ipynb  walkthrough.ipynb
paper/: codemeta.json  paper.bib  paper.md
tests/: .gitignore  README.md  __init__.py  base.py  checks.py  conftest.py  dataset.py  fixtures.py  images.py  rand.py  random.py  requirements.txt  sklearn_test_utils.py  test_api.py  test_base.py  test_bestfit.py  test_boundaries.py  test_classifier.py  test_classifier_old.py  test_draw.py  test_exceptions.py  test_meta.py  test_mixins.py  test_pipeline.py  (+5 more)
(+526 files in other folders)
