[metadata]
description-file = DESCRIPTION.txt

[wheel]
universal = 1

[test]
local_freetype = True
tests = True

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=yellowbrick --flakes --spec
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    examples/* ALL
    tests/checks.py ALL
spec_header_format = {class_name} ({path})
