[metadata]
description-file = DESCRIPTION.txt
license_file = LICENSE.txt

[wheel]
universal = 1

[test]
local_freetype = True
tests = True

[aliases]
test=pytest

[tool:pytest]
# TODO: add --spec and --verbose back to addopts
addopts = --cov=yellowbrick --flakes
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    examples/* ALL
    tests/checks.py ALL
    docs/_build ALL
spec_header_format = {class_name} ({path})
filterwarnings =
    once::UserWarning
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore::sklearn.exceptions.ConvergenceWarning
    ignore::FutureWarning
