[metadata]
description-file = DESCRIPTION.txt
license_file = LICENSE.txt

[test]
local_freetype = True
tests = True

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov=yellowbrick --flakes --spec --cov-report=xml --cov-report term
python_files = tests/*
flakes-ignore =
    __init__.py UnusedImport
    __init__.py ImportStarUsed
    test_*.py ImportStarUsed
    test_*.py ImportStarUsage
    conftest.py UnusedVariable
    examples/* ALL
    tests/checks.py ALL
    docs/_build ALL
spec_header_format = {class_name} ({path})
filterwarnings =
    once::UserWarning
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore::sklearn.exceptions.ConvergenceWarning
    ignore::FutureWarning

[flake8]
# match black maximum line length
max-line-length = 88
per-file-ignores =
    __init__.py:F401
    test_*.py:F405,F403
    conftest.py:F841